# art-gallery-ghost-cmake

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Info.plist.in  build.sh  cmake-guide.md  main.cpp
.github/workflows/: cd.yml  ci.yml
__cmake_systeminformation/: CMakeCache.txt  Makefile  cmake_install.cmake  results.txt
ems_include/: al.h  alc.h
emscripten/: shell.html
include/: Mir.hpp
include/core/: Components.hpp  Display.hpp  Entity.hpp  Event.hpp  Input.hpp  InputHandler.hpp  Manager.hpp  Recorder.hpp  Systems.hpp
include/file/: Recorder.hpp
include/handle/: Event.hpp  Input.hpp
include/util/: Debugger.hpp  Profiler.hpp  Timer.hpp
include/view/: Camera.hpp  Display.hpp  Scene.hpp  UI.hpp
includes/: Mir.hpp
includes/core/: Components.hpp  Manager.hpp  Systems.hpp
includes/file/: Recorder.hpp
includes/handle/: Event.hpp  HTTP.hpp  Input.hpp
includes/util/: Debugger.hpp  Math.hpp  Profiler.hpp  Timer.hpp  Types.hpp
includes/view/: Camera.hpp  Display.hpp  Scene.hpp  UI.hpp
src/: App.hpp  Emscript.hpp  Game.cpp  Game.hpp  Player.hpp  Scene.hpp
src/game/: Game.hpp  Ground.hpp  Network.hpp  Player.hpp  TestParticle.hpp
src/main/: Ground.hpp  Player.hpp
src/menu/: Button.hpp  Menu.hpp  Title.hpp
src/title/: Button.hpp  Title.hpp
